# brush-can

./: .gitignore  README.md  improvements.txt  notes.txt
firmware/BrushCAN/: .cproject  .project  BrushCAN.ioc
firmware/BrushCAN/Core/Inc/: stm32g4xx_hal_conf.h
firmware/BrushCAN/Core/Src/: main.c  stm32g4xx_hal_msp.c
firmware/brush-can/: .cproject  .mxproject  .project  CMakeLists.txt  brush-can.ioc  brush-can.launch
firmware/brush-can/App/Inc/: adc.h  command.h  control.h  encoder.h  filter.h  motor.h  pid.h
firmware/brush-can/App/Src/: adc.c  app.c  can.c  command.c  control.c  encoder.c  filter.c  motor.c  pid.c
firmware/brush-can/Core/Inc/: main.h  stm32g4xx_it.h
firmware/brush-can/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
firmware/brush-can/cmake/: gcc-arm-none-eabi.cmake
firmware/brush-can/cmake/stm32cubemx/: CMakeLists.txt
firmware/brush-can2/: .cproject  .project  brush-can2.ioc
firmware/brush-can2/Core/Src/: main.c  stm32g4xx_hal_msp.c
firmware/brushold/: .mxproject  .project  brush-can.ioc
firmware/brushold/App/Inc/: adc.h  can.h  command.h  control.h  encoder.h
firmware/brushold/App/Src/: adc.c  app.c  encoder.c  motor.c
firmware/brushold/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/brushold/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
pcb/: brush-can.kicad_pcb  brush-can.kicad_prl  brush-can.kicad_pro  brush-can.kicad_sch  brush3-can.kicad_prl  brush3-can.kicad_pro  brush3-can.kicad_sch  driver.kicad_sch
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
software/: brush_can.py  test.py
